# opensource-projects

./: README.md
ansible/: README.md
ansible/inventory/: hosts
ansible/playbooks/: apt.yml
cpp/: README.md
cpp/lnx-drv-cy14b101na/: .clang-format  Makefile  README.md  cy14b101na.c
cpp/open-ventilator/: .gitignore  CODE_OF_CONDUCT.md  README.md
cpp/open-ventilator/docs/00-project-management-plan/source/: conf.py  configuration_mgmt.rst  id.rst  index.rst  introduction.rst  project_mgmt.rst  resolution.rst  software_dev.rst  system_requirements.rst  testing_phases.rst
cpp/open-ventilator/docs/01-risk-management-plan/source/: conf.py  index.rst  introduction.rst  ranking_system.rst  risk_after.rst  software_dev.rst
cpp/open-ventilator/source/: Doxyfile
cpp/open-ventilator/source/corelib/include/: alarm_defs.h  ovp.h  ventilator_modes.h
cpp/open-ventilator/source/hardware-lib/include/: ADC.h  AlarmBuzzer.h  GPIO.h  LEDS.h  POST.h  hardware.h
cpp/xcdb/: .gitignore  CMakeLists.txt  README.md  cbs.sch  sample.sch
cpp/xcdb/include/: btree.h  cdata.h  datafile.h  keys.h  sys.h
cpp/xcdb/src/: cdata.c  datafile.c  schema.c  sys.c
cpp/xcdb/tests/: test.cpp
docker-examples/: README.md
docker-examples/cowsay/: Dockerfile  README.md  entrypoint.sh
hiking-trails/: README.md
hiking-trails/Minnesota/: BRT.gpx  README.md  Voyageurs-GPS-waypoints-tracks-for-web-3-29-2019.gpx  mnwiapoi2019.gpx
web-development/: README.md
web-development/boilerplate-html-barebones/: .project  README.md
web-development/boilerplate-html-barebones/source/: index.html
